# GameCheats

./: .editorconfig  .gitignore  CMakeLists.txt  GameCheats.cppcheck  GoogleTest.cmake  Mega.pch  ReadMe.md
.github/workflows/: cppcheck.yml  msvc.yml
CrysisR/: CMakeLists.txt  CrysisR.cpp
Doom2016/: CMakeLists.txt  Doom2016.cpp
Doom3BFG/: CMakeLists.txt  Doom3BFG.cpp
Doom3ROE/: CMakeLists.txt  Doom3ROE.cpp
DoomEternal/: CMakeLists.txt  DoomEternal.cpp
EntryPoint/: CMakeLists.txt  Main.cpp
Fallout2/: CMakeLists.txt  Fallout2.cpp
Fallout4/: CMakeLists.txt  Fallout4.asm  Fallout4.cpp
FalloutNV/: CMakeLists.txt  FalloutNV-PCH.hpp  FalloutNV.cpp
HOMM3/: CMakeLists.txt  HOMM3-PCH.hpp  HOMM3.cpp
HackLib/: AutoHandle.cpp  AutoHandle.hpp  ByteStream.cpp  ByteStream.hpp  CMakeLists.txt  CmdArgs.cpp  CmdArgs.hpp  CommandLine.cpp  CommandLine.hpp  Exceptions.cpp  Exceptions.hpp  FindFunctionX64.asm  FindFunctionX86.asm  FsOps.cpp  FsOps.hpp  HackLib-PCH.hpp  HackLib.hpp  Handle.hpp  Logger.cpp  Logger.hpp  MemoryRegion.cpp  MemoryRegion.hpp  NonCopyable.hpp  OpCodes.hpp  PE.cpp  PE.hpp  Pointer.hpp  PointerMap.hpp  Process.cpp  Process.hpp  Registry.cpp  Registry.hpp  SHA256.cpp  SHA256.hpp  StrConvert.cpp  StrConvert.hpp  Strings.cpp  Strings.hpp  System.cpp  System.hpp  (+18 more)
HackLibTests/: ByteStreamTests.cpp  CMakeLists.txt  ChecksumTests.cpp  CmdArgsTests.cpp  CommandLineTests.cpp  EventTests.cpp  HackLibTests-PCH.hpp  HackLibTests.cpp  HackLibTests.pch  MemoryLeakListener.cpp  MemoryRegionTests.cpp  PETests.cpp  PointerMapTests.cpp  PointerTests.cpp  ProcessTests.cpp  RegistryTests.cpp  StrConvertTest.cpp  StringTest.cpp  SystemTests.cpp  ThreadTests.cpp  TypeHelpTests.cpp  WildcardTests.cpp
HiddenAndDangerous/: CMakeLists.txt  HiddenAndDangerous-PCH.hpp  HiddenAndDangerous.cpp
Hitman2000/: CMakeLists.txt  Hitman2000.cpp
Hitman2002/: CMakeLists.txt  Hitman2002.cpp
Hitman2004/: CMakeLists.txt  Hitman2004.cpp
Hitman2006/: CMakeLists.txt  Hitman2006.cpp
Hitman2012/: CMakeLists.txt  Hitman2012.cpp
Hitman2016/: CMakeLists.txt  HM2016-PCH.hpp  Hitman2016.cpp
Hitman2018/: CMakeLists.txt  Hitman2018.asm  Hitman2018.cpp
Hitman2021/: CMakeLists.txt  Hitman2021.asm  Hitman2021.cpp
Hitman2SA/: CMakeLists.txt  Hitman2SA.cpp
HitmanAbsolution/: CMakeLists.txt  HitmanAbsolution.cpp
HitmanC47/: CMakeLists.txt  HitmanC47.cpp
MayPayne/: CMakeLists.txt  MaxPayne-PCH.hpp  MaxPayne.cpp
MayPayne2/: CMakeLists.txt  MaxPayne2.cpp
MayPayneTrainer/: CMakeLists.txt  MaxPayneTrainer-PCH.hpp  MaxPayneTrainer.cpp
Metro2033Redux/: CMakeLists.txt  Metro2033Redux.cpp
ProxyLibraryGenerator/: CMakeLists.txt  FileGenerator.cpp  FileGenerator.hpp  ProxyLibraryGenerator.cpp  ReadMe.md  SourceFileGenerator.cpp  SourceFileGenerator.hpp
Quake1/: CMakeLists.txt  Quake1-PCH.hpp  Quake1.cpp
Quake1R/: CMakeLists.txt  Quake1.cpp  Quake1Cheats.asm
Quake2R/: CMakeLists.txt  Quake2.cpp
R6BO/: CMakeLists.txt  R6BO-PCH.hpp  R6BO.cpp
RAGE/: CMakeLists.txt  RAGE.cpp
Rage1/: CMakeLists.txt  Rage1.cpp
Stalker2007/: CMakeLists.txt  Stalker2007.cpp
Template/: CMakeLists.txt  Template.asm  Template.cpp
XCOMA/: CMakeLists.txt  XCOMA.cpp
