cmake_minimum_required(VERSION 3.16)

project("GameCheats" LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(EXECUTABLE_OUTPUT_PATH "..")
set(LIBRARY_OUTPUT_PATH "..")

if(MSVC)
	set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
	add_compile_options(/MP /W4 /WX /utf-8)
	add_compile_definitions(NOMINMAX VC_EXTRALEAN)
endif()

add_subdirectory("HackLib")
include_directories("HackLib")
add_subdirectory("EntryPoint")

if(CMAKE_SIZEOF_VOID_P EQUAL 4)
	add_subdirectory("MayPayne")
	add_subdirectory("HOMM3")
	add_subdirectory("R6BO")
	add_subdirectory("HiddenAndDangerous")
	add_subdirectory("MayPayne2")
	add_subdirectory("Hitman2012")
	add_subdirectory("FalloutNV")
	add_subdirectory("Hitman2000")
	add_subdirectory("Hitman2002")
	add_subdirectory("Hitman2004")
	add_subdirectory("Hitman2006")
	add_subdirectory("Stalker2007")
	add_subdirectory("XCOMA")
	add_subdirectory("Doom3BFG")
	add_subdirectory("Template")
endif()

if(CMAKE_SIZEOF_VOID_P EQUAL 8)
	add_subdirectory("Quake1")
	add_subdirectory("Hitman2016")
	add_subdirectory("Metro2033Redux")
	add_subdirectory("Template")
endif()

set(BUILD_GMOCK OFF CACHE BOOL "" FORCE)
set(INSTALL_GTEST OFF CACHE BOOL "" FORCE)
include("GoogleTest.cmake")
include(GoogleTest)
add_subdirectory("HackLibTests")
enable_testing()
