cmake_minimum_required(VERSION 3.16)

project("GameCheats" LANGUAGES CXX ASM_MASM)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(EXECUTABLE_OUTPUT_PATH "..")
set(LIBRARY_OUTPUT_PATH "..")

if(MSVC)
	set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
	add_compile_options("$<$<COMPILE_LANGUAGE:C,CXX>:/MP>")
	add_compile_options("$<$<COMPILE_LANGUAGE:C,CXX>:/W4>")
	add_compile_options("$<$<COMPILE_LANGUAGE:C,CXX>:/WX>")
	add_compile_options("$<$<COMPILE_LANGUAGE:C,CXX>:/utf-8>")
	add_compile_options("$<$<AND:$<COMPILE_LANGUAGE:ASM_MASM>,$<CONFIG:DEBUG>>:/Zi>")
	add_compile_definitions(NOMINMAX WIN32_LEAN_AND_MEAN)
endif()

add_subdirectory("HackLib")
include_directories("HackLib")
add_subdirectory("EntryPoint")
add_subdirectory("ProxyLibraryGenerator")

if(CMAKE_SIZEOF_VOID_P EQUAL 4)
	add_subdirectory("MayPayne")
	add_subdirectory("HOMM3")
	add_subdirectory("R6BO")
	add_subdirectory("HiddenAndDangerous")
	add_subdirectory("MayPayne2")
	add_subdirectory("Hitman2012")
	add_subdirectory("FalloutNV")
	add_subdirectory("Hitman2000")
	add_subdirectory("Hitman2002")
	add_subdirectory("Hitman2004")
	add_subdirectory("Hitman2006")
	add_subdirectory("Stalker2007")
	add_subdirectory("XCOMA")
	add_subdirectory("Doom3BFG")
	add_subdirectory("Doom3ROE")
	add_subdirectory("Template")
endif()

if(CMAKE_SIZEOF_VOID_P EQUAL 8)
	add_subdirectory("Quake1")
	add_subdirectory("Hitman2016")
	add_subdirectory("Metro2033Redux")
	add_subdirectory("Doom2016")
	add_subdirectory("CrysisR")
	add_subdirectory("DoomEternal")
	add_subdirectory("Hitman2018")
	add_subdirectory("Hitman2021")
	add_subdirectory("RAGE")
	add_subdirectory("Template")
endif()

set(BUILD_GMOCK OFF CACHE BOOL "" FORCE)
set(INSTALL_GTEST OFF CACHE BOOL "" FORCE)
include("GoogleTest.cmake")
include(GoogleTest)
add_subdirectory("HackLibTests")
enable_testing()
